@@ -1,7 +1,15 @@
 2005-12-11 Emfox Zhou  <emfoxzhou@gmail.com>
 
-	* src/view/telnetcon.h
-	src/view/telnetview.cpp
+	* src/view/telnetcon.h,
+	src/view/telnetview.cpp,
+	src/view/telnetcon.cpp,
+	src/view/telnetview.h,
+	configure.ac: --disable-mouse for compiling without Mouse Support.
+	
+2005-12-11 Emfox Zhou  <emfoxzhou@gmail.com>
+
+	* src/view/telnetcon.h,
+	src/view/telnetview.cpp,
 	src/view/telnetcon.cpp: coordinate with maple bbs for Mouse Support.
 
 2005-12-08 Emfox Zhou  <emfoxzhou@gmail.com>
